--- a/src/assets/styles/abstracts/variables.scss
+++ b/src/assets/styles/abstracts/variables.scss
@@ -6,30 +6,36 @@ $button-apply: #17C671;
 $button-change: #818EA3;
 $search-color:#CACEDB;
 $main-white: #FFFFFF;
+$main-white_dark: #f3f2f2;
 $border-auth: #BECAD6;
 $placeholder-auth: #3D5170;
 $border-auth_hover: #3D5170;
-$base-font_color: #3D5170;
+$base-font_color: #1d2328;
 $auth-label: #495057;
 $download-font-color:#495057;
 $download-background-color:#E9ECEF;
 $button-grey:#E9ECEF;
 $error: #FF6347FF;
-$icon: #CACEDB;
+$icon: #94979b;
 $hover: #20ce88;
 $main-green:#20ce88;
+$main-green_hover: #039d60;
 $main-blue:#007BFF;
+$main-yellow: #f9bc2c;
+$main-yellow_hover: #b0842d;
 $box-shadow: #E1E5EB;
 $box-shadow_nav:#5A61691C;
 $box-shadow_footer: #D7DAE3;
-$notification: #C4183C;
-$notification-bell: #818EA3;
+$notification: #ff7875;
+$notification_hover: #c05858;
+$notification-bell: #f9bc2c;
 $card-category: #818EA3;
 $header-border: #CACEDB;
 $background-orders: #F5F6F8;
 $uncle: #ABB6BF;
 $username: #5A6169;
 $select: #868E96;
+$background-card :#fefefe;
 $main-gray: #999999;
 $main-black: #121212;
 $font-color-grey: #5A6169;
@@ -37,4 +43,5 @@ $font-color-grey_light: #868E96;
 $font-color-grey_lightMax:#CACEDB;
 $neutral-border: #BECAD6;
 $header-elem-bottom: #E0E2E8;
+$heart_non-hover:#f2f2f2;
 
